--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
         "cmath": "cpp",
         "random": "cpp",
         "*.tcc": "cpp"
-    }
+    },
+    "files.eol": "\n",
+    "deno.enable": false
 }
