--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "dependencies": {
-    "@thi.ng/pixel": "^7.3.10",
-    "@thi.ng/pixel-dither": "^1.1.150",
-    "@types/wicg-file-system-access": "^2023.10.5",
-    "idb-keyval": "^6.2.1",
-    "octokit": "^4.1.0",
-    "twgl.js": "^5.5.4"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/bun": "^1.1.14"
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+    "cssnano": "^7.1.0",
+    "html-minifier-terser": "^7.2.0",
+    "postcss-cli": "^11.0.1",
+    "postcss-import": "^16.1.1"
+  }
 }
