--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -19,11 +19,11 @@ jobs:
         run: npm install # Adjust this command if you use a different package manager or have additional setup steps
 
       - name: Install gnuplot
-        run: sudo apt install gnuplot
+        run: sudo apt install gnuplot-nox colorized-logs
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
-          bash ./generate
+          bash ./generate && bash ./generate minify-out
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
