--- a/.github/workflows/build-on-push.yml
+++ b/.github/workflows/build-on-push.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install gnuplot
         run: sudo apt install gnuplot-nox colorized-logs
 
+      - name: Install bun
+        uses: oven-sh/setup-bun@v2
+
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           bash ./generate && bash ./generate minify-out
